--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<p>hello world</p>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+		</div>
+	</div>
+</div>
