--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+			 
+			<button type="button" class="btn active btn-primary">
+				Button
+			</button>
 		</div>
 	</div>
 </div>
