--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>im-mp3.github.io</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./favicon.ico" />
+    <title>Gradient Background</title>
+    <style>
+        body {
+            margin: 0;
+            background: linear-gradient(to bottom, #000000, #1a1a1a);
+            height: 100vh;
+        }
+    </style>
 </head>
-
 <body>
-    
-    <canvas class="airpod-scrolling"></canvas>
-
-    <script src="app.js"></script>
-
 </body>
 </html>
