--- a/index.html
+++ b/index.html
@@ -13,45 +13,116 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start; /* Align items to the start */
+            overflow-x: hidden; /* Prevent horizontal scrolling */
+        }
+        .loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 1); /* Make the background completely opaque */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            opacity: 1;
+            transition: opacity 1s ease-out;
+        }
+        .loading-circle {
+            width: 80px;
+            height: 80px;
+            border: 8px solid rgba(255, 255, 255, 0.3);
+            border-top: 8px solid #ffffff;
+            border-radius: 50%;
+            animation: spin 1.3s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
         .arrows {
-            position: fixed; /* Make the arrows follow the scroll */
-            top: 25vh; /* Initial position of arrows */
-            left: 50%; /* Center horizontally */
-            transform: translateX(-50%); /* Adjust for exact horizontal centering */
+            position: absolute; /* Position arrows statically */
+            top: 25vh; /* Position 25% from the top */
+            width: 100%; /* Take full width */
             text-align: center;
-            font-size: 4em; /* Increased font size for larger arrows */
+            font-size: 6em; /* Increased font size for larger arrows */
             font-weight: bold; /* Make the arrows bold */
-            color: #ffffff;
             display: flex;
-            justify-content: center; /* Center the arrows */
-            gap: 50px; /* Space arrows by 50 pixels */
-            transition: top 0.3s ease; /* Add a transition for smooth movement */
+            justify-content: center; /* Center arrows horizontally */
+            align-items: center;
+            gap: 50px; /* Space arrows */
+            background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: rainbow 3s infinite linear;
+            background-size: 400% 400%;
+        }
+        @keyframes rainbow {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
         .arrow {
-            color: red;
+            color: inherit; /* Inherit the gradient color */
+        }
+        .buttons {
+            position: fixed; /* Fix the buttons to the bottom */
+            bottom: 20px; /* Position 20px from the bottom */
+            left: 5%; /* Align to the left */
+            display: none; /* Hide buttons initially */
+            flex-direction: column; /* Arrange buttons vertically */
+            gap: 20px; /* Space buttons by 20 pixels */
+        }
+        .button {
+            padding: 10px 20px;
+            font-size: 1em;
+            font-weight: bold;
+            color: #ffffff;
+            background-color: #333333;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #555555;
         }
     </style>
 </head>
 <body>
+    <div class="loading-screen" id="loading-screen">
+        <div class="loading-circle"></div>
+    </div>
     <div class="arrows">
         <span class="arrow" id="arrow1">&#8595;</span>
         <span class="arrow" id="arrow2">&#8595;</span>
         <span class="arrow" id="arrow3">&#8595;</span>
     </div>
     <div class="content"></div>
+    <div class="buttons" id="buttons">
+        <button class="button">Button 1</button>
+        <button class="button">Button 2</button>
+        <button class="button">Button 3</button>
+    </div>
 
     <script>
-        window.addEventListener('scroll', function() {
-            const maxScroll = document.body.scrollHeight * 0.3;
-            const scrollPosition = window.scrollY;
+        document.addEventListener('DOMContentLoaded', function() {
+            setTimeout(function() {
+                const loadingScreen = document.getElementById('loading-screen');
+                loadingScreen.style.opacity = '0';
+                document.body.style.overflow = 'auto'; /* Re-enable scrolling after loading */
+                setTimeout(function() {
+                    loadingScreen.style.display = 'none';
+                }, 1000); // Give time for the transition to complete
+            }, 1300); // Hide loading screen after 1.3 seconds
+        });
 
-            if (scrollPosition <= maxScroll) {
-                const topPosition = 25 + (scrollPosition / maxScroll) * 5; // Calculate position based on scroll
-                document.querySelector('.arrows').style.top = `${topPosition}vh`;
+        window.addEventListener('scroll', function() {
+            // Show buttons when fully scrolled down
+            if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+                document.getElementById('buttons').style.display = 'flex';
             } else {
-                document.querySelector('.arrows').style.position = 'absolute';
-                document.querySelector('.arrows').style.top = `${(maxScroll / window.innerHeight) * 100}vh`;
+                document.getElementById('buttons').style.display = 'none';
             }
         });
     </script>
