--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Gradient with Arrow and Buttons</title>
+    <title>im-mp3.github.io</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         * {
             margin: 0;
@@ -372,7 +373,7 @@
     <div class="bottom-section">
         <div class="button-unit">
             <button class="button" id="cookie-clicker">
-                <img src="Cookie_Clicker.png" alt="Cookie" class="cookie-logo-img">
+                <img src="/api/placeholder/30/30" alt="Cookie" class="cookie-logo-img">
                 Cookie Clicker
             </button>
             <div class="description-box">
@@ -399,7 +400,7 @@
         <div class="popup-box">
             <div class="popup-close" id="close-popup"></div>
             <div class="popup-content">
-                <p>comign soon</p>
+                <p>coming soon</p>
             </div>
         </div>
     </div>
