--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Gradient with Arrow and Buttons</title>
-    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         * {
             margin: 0;
@@ -349,7 +348,7 @@
             opacity: 0.8;
         }
         
-        .cookie-logo-img {
+        .logo-img {
             width: 30px;
             height: 30px;
             margin-right: 10px;
@@ -373,7 +372,7 @@
     <div class="bottom-section">
         <div class="button-unit">
             <button class="button" id="cookie-clicker">
-                <img src="/api/placeholder/30/30" alt="Cookie" class="cookie-logo-img">
+                <img src="Cookie_Clicker.png" alt="Cookie" class="logo-img">
                 Cookie Clicker
             </button>
             <div class="description-box">
@@ -382,7 +381,10 @@
         </div>
         
         <div class="button-unit">
-            <button class="button" id="polytrack">PolyTrack</button>
+            <button class="button" id="polytrack">
+                <img src="Polytrack.png" alt="PolyTrack" class="logo-img">
+                PolyTrack
+            </button>
             <div class="description-box">
                 <p>Last Updated: March 23 2025 (latest version)</p>
             </div>
