--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <div class="game-popout-content">
             <span class="close-popout" id="close-popout">&times;</span>
             <h2 class="game-title">Cookie Clicker</h2>
-            <img src="/api/placeholder/1200/800" alt="Cookie Clicker Game" class="game-popout-image">
+            <img src="Cookieclickerpopout.png" alt="Cookie Clicker Game" class="game-popout-image">
             <a href="#" class="play-button">Open Website</a>
         </div>
     </div>
