--- a/index.html
+++ b/index.html
@@ -246,17 +246,6 @@
             opacity: 0.8;
         }
 
-        .game-title {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-            text-shadow: 0 0 10px rgba(0,0,0,0.5), 2px 2px 4px rgba(0,0,0,0.3);
-            z-index: 10;
-        }
-
         .play-button {
             position: absolute;
             bottom: 20px;
@@ -356,8 +345,7 @@
     <div class="game-popout" id="cookie-clicker-popout">
         <div class="game-popout-content">
             <span class="close-popout" id="close-popout">&times;</span>
-            <h2 class="game-title">Cookie Clicker</h2>
-            <img src="Cookieclickerpopout.png" alt="Cookie Clicker Game" class="game-popout-image">
+            <img src="cookieclickerthumb.png" alt="Cookie Clicker Game" class="game-popout-image">
             <a href="#" class="play-button">Open Website</a>
         </div>
     </div>
