--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 
         .game-popout-content {
             position: relative;
-            width: 70%;
-            max-width: 900px;
+            width: 85%; /* Increased from 70% to make it even wider */
+            max-width: 1100px; /* Increased from 900px to make it even wider */
             height: 50%;
             background: rgba(20, 20, 20, 0.9);
             border-radius: 15px;
