--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             transform: scale(1.05);
         }
 
-        /* Popout Styling with Animation */
+        /* Modified Popout Styling with Animation */
         .game-popout {
             position: fixed;
             top: 0;
@@ -220,9 +220,9 @@
 
         .game-popout-content {
             position: relative;
-            width: 85%; /* Increased from 70% to make it even wider */
-            max-width: 1100px; /* Increased from 900px to make it even wider */
-            height: 50%;
+            width: 70%; /* Reduced from 85% to scale down the overall popout */
+            max-width: 900px; /* Reduced from 1100px */
+            height: 60%; /* Increased from 50% to make the image taller vertically */
             background: rgba(20, 20, 20, 0.9);
             border-radius: 15px;
             overflow: hidden;
@@ -240,7 +240,7 @@
 
         .game-popout-image {
             width: 100%;
-            height: 100%;
+            height: 100%; /* Set to 100% to fill the now taller container */
             object-fit: cover;
             opacity: 1;
         }
@@ -344,7 +344,7 @@
     <div class="game-popout" id="cookie-clicker-popout">
         <div class="game-popout-content">
             <span class="close-popout" id="close-popout">&times;</span>
-            <img src="cookieclickerthumb.png" alt="Cookie Clicker Game" class="game-popout-image">
+            <img src="/api/placeholder/900/540" alt="Cookie Clicker Game" class="game-popout-image">
             <a href="#" class="play-button">Open Website</a>
         </div>
     </div>
