--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             transform: scale(1.05);
         }
 
-        /* Modified Popout Styling with Animation */
+        /* Updated Popout Styling with Sidebar */
         .game-popout {
             position: fixed;
             top: 0;
@@ -220,9 +220,9 @@
 
         .game-popout-content {
             position: relative;
-            width: 70%; /* Reduced from 85% to scale down the overall popout */
-            max-width: 900px; /* Reduced from 1100px */
-            height: 60%; /* Increased from 50% to make the image taller vertically */
+            width: 85%;
+            max-width: 1200px;
+            height: 60%;
             background: rgba(20, 20, 20, 0.9);
             border-radius: 15px;
             overflow: hidden;
@@ -231,6 +231,8 @@
             transform: scale(0.7);
             opacity: 0;
             transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            display: flex;
+            flex-direction: row;
         }
 
         .game-popout.show .game-popout-content {
@@ -238,26 +240,53 @@
             opacity: 1;
         }
 
+        .game-popout-image-container {
+            flex: 3;
+            height: 100%;
+        }
+
         .game-popout-image {
             width: 100%;
-            height: 100%; /* Set to 100% to fill the now taller container */
+            height: 100%;
             object-fit: cover;
-            opacity: 1;
+        }
+
+        .game-popout-sidebar {
+            flex: 1;
+            padding: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            background: rgba(30, 30, 30, 0.95);
+            border-left: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .game-popout-title {
+            font-size: 28px;
+            font-weight: 700;
+            margin-bottom: 20px;
+            color: #f5f5f7;
+        }
+
+        .game-popout-desc {
+            font-size: 16px;
+            line-height: 1.6;
+            color: rgba(255, 255, 255, 0.8);
+            margin-bottom: 30px;
         }
 
         .play-button {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
             background: #2ecc71;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border-radius: 50px;
             text-decoration: none;
             font-weight: bold;
             transition: all 0.3s ease;
             z-index: 10;
             display: inline-block;
+            text-align: center;
+            margin-top: auto;
         }
 
         .play-button:hover {
@@ -340,12 +369,20 @@
         </div>
     </div>
 
-    <!-- Cookie Clicker Popout -->
+    <!-- Updated Cookie Clicker Popout with Sidebar -->
     <div class="game-popout" id="cookie-clicker-popout">
         <div class="game-popout-content">
+            <div class="game-popout-image-container">
+                <img src="cookieclickerthumb.png" alt="Cookie Clicker Game" class="game-popout-image">
+            </div>
+            <div class="game-popout-sidebar">
+                <div>
+                    <h2 class="game-popout-title">Cookie Clicker</h2>
+                    <p class="game-popout-desc">Click cookies, build an empire of cookie production. The original idle game where you bake cookies to rule the universe!</p>
+                </div>
+                <a href="#" class="play-button">Open Website</a>
+            </div>
             <span class="close-popout" id="close-popout">&times;</span>
-            <img src="/api/placeholder/900/540" alt="Cookie Clicker Game" class="game-popout-image">
-            <a href="#" class="play-button">Open Website</a>
         </div>
     </div>
 
