--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 
         .game-popout-content {
             position: relative;
-            width: 85%;
-            max-width: 1200px;
+            width: 90%;
+            max-width: 1400px;
             height: 60%;
             background: rgba(20, 20, 20, 0.9);
             border-radius: 15px;
@@ -241,7 +241,7 @@
         }
 
         .game-popout-image-container {
-            flex: 3;
+            flex: 4; /* Increased from 3 to 4 to make image take more horizontal space */
             height: 100%;
         }
 
@@ -249,6 +249,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center; /* Ensures the image is centered */
         }
 
         .game-popout-sidebar {
@@ -259,6 +260,7 @@
             justify-content: space-between;
             background: rgba(30, 30, 30, 0.95);
             border-left: 1px solid rgba(255, 255, 255, 0.1);
+            min-width: 250px; /* Ensures sidebar doesn't get too narrow */
         }
 
         .game-popout-title {
