--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             transform: scale(1.05);
         }
 
-        /* Further updated Popout Styling with even longer image */
+        /* Updated Popout Styling with Sidebar */
         .game-popout {
             position: fixed;
             top: 0;
@@ -220,8 +220,8 @@
 
         .game-popout-content {
             position: relative;
-            width: 94%;
-            max-width: 1600px;
+            width: 90%;
+            max-width: 1400px;
             height: 60%;
             background: rgba(20, 20, 20, 0.9);
             border-radius: 15px;
@@ -241,10 +241,8 @@
         }
 
         .game-popout-image-container {
-            flex: 5; /* Increased from 4 to 5 to make image even longer horizontally */
+            flex: 4; /* Increased from 3 to 4 to make image take more horizontal space */
             height: 100%;
-            position: relative;
-            overflow: hidden;
         }
 
         .game-popout-image {
@@ -263,7 +261,6 @@
             background: rgba(30, 30, 30, 0.95);
             border-left: 1px solid rgba(255, 255, 255, 0.1);
             min-width: 250px; /* Ensures sidebar doesn't get too narrow */
-            max-width: 280px; /* Limits sidebar width to give more space to image */
         }
 
         .game-popout-title {
@@ -374,7 +371,7 @@
         </div>
     </div>
 
-    <!-- Further updated Cookie Clicker Popout with even longer image -->
+    <!-- Updated Cookie Clicker Popout with Sidebar -->
     <div class="game-popout" id="cookie-clicker-popout">
         <div class="game-popout-content">
             <div class="game-popout-image-container">
@@ -383,7 +380,7 @@
             <div class="game-popout-sidebar">
                 <div>
                     <h2 class="game-popout-title">Cookie Clicker</h2>
-                    <p class="game-popout-desc">Click cookies, build an empire of cookie production. The original idle game where you bake cookies to rule the universe!</p>
+                    <p class="game-popout-desc">Cookie Clicker is a game about making an absurd amount of cookies. To help you in this endeavor, you will recruit a wide variety of helpful cookie makers, like friendly Grandmas, Farms, Factories, and otherworldly Portals. Cookie Clicker was originally released in 2013, but has been very actively developed since then.</p>
                 </div>
                 <a href="#" class="play-button">Open Website</a>
             </div>
