--- a/index.html
+++ b/index.html
@@ -1,56 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Toggle</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-            transition: background-color 0.3s, color 0.3s;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ar</title>
+<style>
+    body {
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        background-color: black;
+        color: white;
+        transition: background-color 0.5s, color 0.5s;
+    }
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 30px;
+        background-color: rgba(0,0,0,0.9);
+        position: sticky;
+        top: 0;
+        z-index: 10;
+    }
+    .navbar-left {
+        font-size: 1.2rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: font-weight 0.3s ease;
+    }
+    .navbar-left:hover {
+        font-weight: 700; /* bold on hover */
+    }
+    .navbar-right {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 
-        .light-mode {
-            background-color: white;
-            color: black;
-        }
+    /* Search icon and sliding input */
+    .search-container {
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+    .search-icon {
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+    }
+    .search-input {
+        position: absolute;
+        right: 30px; /* space so it doesn't overlap icon */
+        width: 0;
+        opacity: 0;
+        padding: 6px 12px;
+        border: none;
+        border-radius: 8px;
+        outline: none;
+        transition: width 0.4s ease, opacity 0.4s ease;
+        background-color: #333;
+        color: white;
+    }
+    body.light-mode .search-input {
+        background-color: #f1f1f1;
+        color: black;
+    }
+    .search-container:hover .search-input {
+        width: 150px; /* expanded width */
+        opacity: 1;
+    }
 
-        #theme-icon {
-            width: 50px;
-            height: 50px;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-
-        #theme-icon:hover {
-            transform: scale(1.1);
-        }
-    </style>
+    /* Theme toggle button */
+    .theme-toggle {
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+    }
+    .theme-toggle img {
+        width: 24px;
+        height: 24px;
+        transition: opacity 0.3s ease;
+    }
+</style>
 </head>
-<body>
-    <h1>Theme Toggle Example</h1>
-    <img id="theme-icon" src="https://img.icons8.com/ios-filled/50/ffffff/sun--v1.png" alt="Theme Toggle">
+<body class="dark-mode">
 
-    <script>
-        const themeIcon = document.getElementById('theme-icon');
+<div class="navbar">
+    <div class="navbar-left">Home</div>
+    <div class="navbar-right">
+        <div class="search-container">
+            <img src="search.png" alt="Search" class="search-icon">
+            <input type="text" class="search-input" placeholder="Search...">
+        </div>
+        <button class="theme-toggle" onclick="toggleTheme()">
+            <img id="theme-icon" src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Light_mode_icon.svg" alt="Theme Toggle">
+        </button>
+    </div>
+</div>
 
-        themeIcon.addEventListener('click', () => {
-            document.body.classList.toggle('light-mode');
+<script>
+    function toggleTheme() {
+        document.body.classList.toggle("light-mode");
+        document.body.classList.toggle("dark-mode");
+        
+        const icon = document.getElementById("theme-icon");
+        if (document.body.classList.contains("light-mode")) {
+            icon.src = "https://upload.wikimedia.org/wikipedia/commons/0/0b/Moon_icon.svg"; // Moon icon
+        } else {
+            icon.src = "https://upload.wikimedia.org/wikipedia/commons/7/7b/Light_mode_icon.svg"; // Sun icon
+        }
+    }
+</script>
 
-            if (document.body.classList.contains('light-mode')) {
-                themeIcon.src = "https://img.icons8.com/ios-filled/50/000000/moon-symbol.png"; // Moon icon for light mode
-            } else {
-                themeIcon.src = "https://img.icons8.com/ios-filled/50/ffffff/sun--v1.png"; // Sun icon for dark mode
-            }
-        });
-    </script>
 </body>
 </html>
