--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>A</title>
+<title>Ar</title>
 <style>
     body {
         margin: 0;
@@ -58,21 +58,26 @@
         right: 30px; /* space so it doesn't overlap icon */
         width: 0;
         opacity: 0;
-        padding: 6px 12px;
+        padding: 8px 20px;
         border: none;
-        border-radius: 8px;
+        border-radius: 20px / 50%; /* pill-shaped corners */
         outline: none;
-        transition: width 0.4s ease, opacity 0.4s ease;
-        background-color: #333;
+        transition: width 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
+        background: rgba(255 255 255 / 0.12); /* translucent white */
+        backdrop-filter: blur(12px);
         color: white;
-        font-size: 1rem;
+        font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        font-weight: 400;
+        font-size: 16px;
+        box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.07);
     }
     body.light-mode .search-input {
-        background-color: #f1f1f1;
-        color: black;
+        background: rgba(255 255 255 / 0.85);
+        color: #1d1d1f;
+        box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
     }
     .search-container:hover .search-input {
-        width: 150px; /* expanded width */
+        width: 180px; /* slightly wider for aesthetics */
         opacity: 1;
     }
 
