--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        background-color: black;
+        background-color: #121212; /* dark but not pure black */
         color: white;
         transition: background-color 0.5s, color 0.5s;
     }
@@ -17,7 +17,11 @@
         justify-content: space-between;
         align-items: center;
         padding: 15px 30px;
-        background-color: rgba(0,0,0,0.9);
+        background: rgba(255, 255, 255, 0.15); /* translucent white */
+        backdrop-filter: blur(30px);
+        -webkit-backdrop-filter: blur(30px);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.12);
+        border: 1px solid rgba(255, 255, 255, 0.3);
         position: sticky;
         top: 0;
         z-index: 10;
